--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -15,6 +15,27 @@ page-home {
     time {
       font-size: 12px;
     }
+    .dl-home-counts {
+      position: absolute;
+      background: rgba(0, 0, 0, 0.5);
+      top: 0;
+      right: 0;
+      bottom: 0;
+      padding-top: 50px;
+      ul {
+        list-style: none;
+        margin: 0;
+        li {
+          float: left;
+          font-size: 14px;
+          text-align: right;
+          margin: 0 10px;
+          strong {
+            font-size: 20px;
+          }
+        }
+      }
+    }
   }
   .dl-add-todo {
     width: 40px;
@@ -35,13 +56,13 @@ page-home {
         font-size: 14px;
       }
       ion-icon {
-        opacity:0.5;
+        opacity: 0.5;
         color: color($colors, primary);
         border: 1px solid #ccc;
         width: 50px;
         height: 50px;
         border-radius: 100%;
-        line-height: 50px!important;
+        line-height: 50px !important;
       }
     }
   }
